cmake_minimum_required(VERSION 3.0.0)
project(CPPNuts VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(classScopes classScopes.cpp)
#add_executable(defaultConstructor defaultConstructor.cpp)
add_executable(multipleConstructors multipleConstructors.cpp)
add_executable(LandRvalueReference LandRvalueReference.cpp)
add_executable(referencedAndCopy referencedAndCopy.cpp)
add_executable(enterTest enterTest.cpp)
add_executable(referenceVariable referenceVariable.cpp)
#add_executable(arrays arrays.cpp)
add_executable(arithmetic arithmetic.cpp)
add_executable(conditionalOperators conditionalOperators.cpp)
add_executable(sizeof sizeof.cpp)
add_executable(doWhile doWhile.cpp)
add_executable(refAndPointerPass refAndPointerPass.cpp)
add_executable(constClassMembers constClassMembers.cpp)
add_executable(inline inline.cpp)
add_executable(classExplained classExplained.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
