cmake_minimum_required(VERSION 3.0.0)
project(CPPNuts VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(classScopes classScopes.cpp)
#add_executable(defaultConstructor defaultConstructor.cpp)
add_executable(multipleConstructors multipleConstructors.cpp)
add_executable(LandRvalueReference LandRvalueReference.cpp)
add_executable(referencedAndCopy referencedAndCopy.cpp)
add_executable(enterTest enterTest.cpp)
add_executable(referenceVariable referenceVariable.cpp)
#add_executable(arrays arrays.cpp)
add_executable(arithmetic arithmetic.cpp)
add_executable(conditionalOperators conditionalOperators.cpp)
add_executable(sizeof sizeof.cpp)
add_executable(doWhile doWhile.cpp)
add_executable(refAndPointerPass refAndPointerPass.cpp)
add_executable(constClassMembers constClassMembers.cpp)
add_executable(inline inline.cpp)
add_executable(classExplained classExplained.cpp)
add_executable(recursive recursive.cpp)
add_executable(typeCastOverload typeCastOverload.cpp)
add_executable(typeCastOverloadA typeCastOverloadA.cpp Dollar.cpp Euro.cpp)
add_executable(forwardDeclaration forwardDeclaration.cpp)
add_executable(fileHandling fileHandling.cpp)
add_executable(classBasedOnString classBasedOnString.cpp)
add_executable(ftyptest ftyptest.cpp atom.cpp ftyp.cpp)
add_executable(virtualMemberFunction virtualMemberFunction.cpp)
add_executable(baseClassVector baseClassVector.cpp)
add_executable(templateClassMember templateClassMember.cpp)
add_executable(charString charString.cpp)
add_executable(sharedCopy sharedCopy.cpp)
add_executable(structSizeTest structSizeTest.cpp)
add_executable(vectorReverse vectorReverse.cpp)
add_executable(copyNewSharedPointer copyNewSharedPointer.cpp)
add_executable(mapExplained mapExplained.cpp)
add_executable(lambdaExplained lambdaExplained.cpp)
add_executable(timeTesting timeTesting.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
